cmake_minimum_required(VERSION 3.20)
project(c_cpp_algorithm)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_C_FLAGS "-fexec-charset=CP949 -g -Wall")


add_executable(solved_silver4_2217 solved/silver4/2217.cpp)
add_executable(solved_gold4_17281 solved/gold4/17281.cpp)
add_executable(solved_gold3_17135 solved/gold3/17135.cpp)
add_executable(solved_silver2_17427 solved/silver2/17427.cpp)
add_executable(solved_gold1_2021 solved/gold1/2021.cpp)