cmake_minimum_required(VERSION 3.20)
project(c_cpp_algorithm)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_C_FLAGS "-fexec-charset=CP949 -g -Wall")


add_executable(solved_silver1_16918 solved/silver1/16918.cpp)
add_executable(solved_bronze1_2846 solved/bronze1/2846.cpp)
add_executable(solved_silver3_1051 solved/silver3/1051.cpp)